JIT: working on eval

--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -62,3 +62,14 @@ target_include_directories(
     PUBLIC
     ${READLINE_INCLUDE_DIR}
 )
+
+# Configure jitEvaluate
+add_executable(
+    jitEvaluate
+    jit_evaluate.cpp
+)
+target_link_libraries(
+    jitEvaluate
+    hyrise
+    hyriseBenchmarkLib
+)
