--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -12,11 +12,11 @@ target_link_libraries(
 # Configure playground
 add_executable(
     hyrisePlayground
-
     playground.cpp
 )
 target_link_libraries(
     hyrisePlayground
+     ${FILESYSTEM_LIBRARY}
     hyrise
     hyriseBenchmarkLib
 )
