--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -157,12 +157,12 @@ set(
     operators/utils/flatten_pqp.hpp
     operators/validate.cpp
     operators/validate.hpp
-    optimizer/join_ordering/abstract_cost_feature_proxy.cpp
-    optimizer/join_ordering/abstract_cost_feature_proxy.hpp
-    optimizer/join_ordering/abstract_cost_model.cpp
-    optimizer/join_ordering/abstract_cost_model.hpp
-    optimizer/join_ordering/abstract_cost_model_sampler.cpp
-    optimizer/join_ordering/abstract_cost_model_sampler.hpp
+    cost_model/abstract_cost_feature_proxy.cpp
+    cost_model/abstract_cost_feature_proxy.hpp
+    cost_model/abstract_cost_model.cpp
+    cost_model/abstract_cost_model.hpp
+    cost_model/abstract_cost_model_sampler.cpp
+    cost_model/abstract_cost_model_sampler.hpp
     optimizer/join_ordering/abstract_dp_algorithm.cpp
     optimizer/join_ordering/abstract_dp_algorithm.hpp
     optimizer/join_ordering/abstract_dp_subplan_cache.hpp
@@ -171,18 +171,18 @@ set(
     optimizer/join_ordering/abstract_join_plan_node.hpp
     optimizer/join_ordering/build_join_plan.cpp
     optimizer/join_ordering/build_join_plan.hpp
-    optimizer/join_ordering/cost_feature.cpp
-    optimizer/join_ordering/cost_feature.hpp
-    optimizer/join_ordering/cost_feature_lqp_node_proxy.cpp
-    optimizer/join_ordering/cost_feature_lqp_node_proxy.hpp
-    optimizer/join_ordering/cost_feature_operator_proxy.cpp
-    optimizer/join_ordering/cost_feature_operator_proxy.hpp
-    optimizer/join_ordering/cost_model_naive.cpp
-    optimizer/join_ordering/cost_model_naive.hpp
-    optimizer/join_ordering/cost_model_linear.cpp
-    optimizer/join_ordering/cost_model_linear.hpp
-    optimizer/join_ordering/cost_model_segmented_sampler.cpp
-    optimizer/join_ordering/cost_model_segmented_sampler.hpp
+    cost_model/cost_feature.cpp
+    cost_model/cost_feature.hpp
+    cost_model/cost_feature_lqp_node_proxy.cpp
+    cost_model/cost_feature_lqp_node_proxy.hpp
+    cost_model/cost_feature_operator_proxy.cpp
+    cost_model/cost_feature_operator_proxy.hpp
+    cost_model/cost_model_naive.cpp
+    cost_model/cost_model_naive.hpp
+    cost_model/cost_model_linear.cpp
+    cost_model/cost_model_linear.hpp
+    cost_model/cost_model_segmented_sampler.cpp
+    cost_model/cost_model_segmented_sampler.hpp
     optimizer/join_ordering/dp_ccp.cpp
     optimizer/join_ordering/dp_ccp.hpp
     optimizer/join_ordering/dp_ccp_top_k.cpp
@@ -191,7 +191,7 @@ set(
     optimizer/join_ordering/dp_subplan_cache_best.hpp
     optimizer/join_ordering/dp_subplan_cache_top_k.cpp
     optimizer/join_ordering/dp_subplan_cache_top_k.hpp
-    optimizer/join_ordering/cost.hpp
+    cost_model/cost.hpp
     optimizer/join_ordering/enumerate_ccp.cpp
     optimizer/join_ordering/enumerate_ccp.hpp
     optimizer/join_ordering/join_plan_node.cpp
