Minimal equi-width histogram

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -166,6 +166,8 @@ set(
     optimizer/histograms/abstract_histogram.hpp
     optimizer/histograms/equal_num_elements_histogram.cpp
     optimizer/histograms/equal_num_elements_histogram.hpp
+    optimizer/histograms/equal_width_histogram.cpp
+    optimizer/histograms/equal_width_histogram.hpp
     optimizer/join_ordering/join_edge.cpp
     optimizer/join_ordering/join_edge.hpp
     optimizer/join_ordering/join_graph_builder.cpp
