--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -40,6 +40,8 @@ add_executable(
     join_ordering_evaluator/abstract_join_ordering_workload.hpp
     join_ordering_evaluator/out.cpp
     join_ordering_evaluator/out.hpp
+    join_ordering_evaluator/join_ordering_evaluator_config.cpp
+    join_ordering_evaluator/join_ordering_evaluator_config.hpp
     join_ordering_evaluator/tpch_join_ordering_workload.cpp
     join_ordering_evaluator/tpch_join_ordering_workload.hpp
     join_ordering_evaluator/job_join_ordering_workload.cpp
