--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -119,8 +119,8 @@ set(
     operators/base_operator_performance_data.hpp
     operators/aggregate.cpp
     operators/aggregate.hpp
-    operators/cardinality_caching_callback.cpp
-    operators/cardinality_caching_callback.hpp
+    #operators/cardinality_caching_callback.cpp
+    #operators/cardinality_caching_callback.hpp
     operators/delete.cpp
     operators/delete.hpp
     operators/difference.cpp
@@ -202,15 +202,15 @@ set(
     cost_model/abstract_cost_model.hpp
     cost_model/abstract_cost_model_sampler.cpp
     cost_model/abstract_cost_model_sampler.hpp
-    optimizer/join_ordering/abstract_dp_algorithm.cpp
-    optimizer/join_ordering/abstract_dp_algorithm.hpp
-    optimizer/join_ordering/abstract_dp_subplan_cache.hpp
-    optimizer/join_ordering/abstract_join_ordering_algorithm.hpp
-    optimizer/join_ordering/abstract_join_plan_node.cpp
-    optimizer/join_ordering/abstract_join_plan_node.hpp
-    optimizer/join_ordering/build_join_plan.cpp
-    optimizer/join_ordering/build_join_plan.hpp
-    optimizer/join_ordering/dp_subplan_cache_top_k.hpp
+    #optimizer/join_ordering/abstract_dp_algorithm.cpp
+    #optimizer/join_ordering/abstract_dp_algorithm.hpp
+    #optimizer/join_ordering/abstract_dp_subplan_cache.hpp
+    #optimizer/join_ordering/abstract_join_ordering_algorithm.hpp
+    #optimizer/join_ordering/abstract_join_plan_node.cpp
+    #optimizer/join_ordering/abstract_join_plan_node.hpp
+    #optimizer/join_ordering/build_join_plan.cpp
+    #optimizer/join_ordering/build_join_plan.hpp
+    #optimizer/join_ordering/dp_subplan_cache_top_k.hpp
     cost_model/cost.hpp
     cost_model/cost_lqp.cpp
     cost_model/cost_lqp.hpp
@@ -241,23 +241,23 @@ set(
     optimizer/join_ordering/dp_subplan_cache_top_k.cpp
     optimizer/join_ordering/enumerate_ccp.cpp
     optimizer/join_ordering/enumerate_ccp.hpp
-    optimizer/join_ordering/join_plan_node.cpp
-    optimizer/join_ordering/join_plan_node.hpp
-    optimizer/join_ordering/join_edge.cpp
-    optimizer/join_ordering/join_edge.hpp
-    optimizer/join_ordering/join_graph_builder.cpp
-    optimizer/join_ordering/join_graph_builder.hpp
-    optimizer/join_ordering/join_graph.cpp
-    optimizer/join_ordering/join_graph.hpp
-    optimizer/join_ordering/join_plan_join_node.cpp
-    optimizer/join_ordering/join_plan_join_node.hpp
-    optimizer/join_ordering/join_plan_vertex_node.cpp
-    optimizer/join_ordering/join_plan_vertex_node.hpp
+    #optimizer/join_ordering/join_plan_node.cpp
+    #optimizer/join_ordering/join_plan_node.hpp
+    #optimizer/join_ordering/join_edge.cpp
+    #optimizer/join_ordering/join_edge.hpp
+    #optimizer/join_ordering/join_graph_builder.cpp
+    #optimizer/join_ordering/join_graph_builder.hpp
+    #optimizer/join_ordering/join_graph.cpp
+    #optimizer/join_ordering/join_graph.hpp
+    #optimizer/join_ordering/join_plan_join_node.cpp
+    #optimizer/join_ordering/join_plan_join_node.hpp
+    #optimizer/join_ordering/join_plan_vertex_node.cpp
+    #optimizer/join_ordering/join_plan_vertex_node.hpp
     optimizer/join_ordering/join_plan_predicate.cpp
     optimizer/join_ordering/join_plan_predicate.hpp
     optimizer/join_ordering/join_vertex_set.hpp
-    optimizer/optimizer.cpp
-    optimizer/optimizer.hpp
+    #optimizer/optimizer.cpp
+    #optimizer/optimizer.hpp
     optimizer/strategy/abstract_rule.cpp
     optimizer/strategy/abstract_rule.hpp
     optimizer/strategy/chunk_pruning_rule.cpp
@@ -268,8 +268,8 @@ set(
     optimizer/strategy/index_scan_rule.hpp
     optimizer/strategy/join_detection_rule.cpp
     optimizer/strategy/join_detection_rule.hpp
-    optimizer/strategy/join_ordering_rule.cpp
-    optimizer/strategy/join_ordering_rule.hpp
+    #optimizer/strategy/join_ordering_rule.cpp
+    #optimizer/strategy/join_ordering_rule.hpp
     optimizer/strategy/predicate_reordering_rule.cpp
     optimizer/strategy/predicate_reordering_rule.hpp
     optimizer/strategy/rule_batch.cpp
@@ -298,7 +298,7 @@ set(
     statistics/chunk_statistics/min_max_filter.hpp
     statistics/chunk_statistics/range_filter.hpp
     statistics/chunk_statistics/range_filter.hpp
-    statistics/abstract_cardinality_estimator.hpp
+    #statistics/abstract_cardinality_estimator.hpp
     statistics/table_statistics.cpp
     statistics/table_statistics.hpp
     statistics/column_statistics.cpp
@@ -307,14 +307,14 @@ set(
     statistics/statistics_import_export.hpp
     statistics/abstract_column_statistics.cpp
     statistics/abstract_column_statistics.hpp
-    statistics/cardinality_estimation_cache.cpp
-    statistics/cardinality_estimation_cache.hpp
-    statistics/cardinality_estimator_cached.cpp
-    statistics/cardinality_estimator_cached.hpp
-    statistics/cardinality_estimator_column_statistics.cpp
-    statistics/cardinality_estimator_column_statistics.hpp
-    statistics/cardinality_estimator_execution.cpp
-    statistics/cardinality_estimator_execution.hpp
+    #statistics/cardinality_estimation_cache.cpp
+    #statistics/cardinality_estimation_cache.hpp
+    #statistics/cardinality_estimator_cached.cpp
+    #statistics/cardinality_estimator_cached.hpp
+    #statistics/cardinality_estimator_column_statistics.cpp
+    #statistics/cardinality_estimator_column_statistics.hpp
+    #statistics/cardinality_estimator_execution.cpp
+    #statistics/cardinality_estimator_execution.hpp
     statistics/generate_column_statistics.cpp
     statistics/generate_column_statistics.hpp
     statistics/generate_table_statistics.cpp
