--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -75,12 +75,12 @@ set(
 #    operators/validate_visibility_test.cpp
 #    #optimizer/column_statistics_test.cpp
 #    optimizer/expression_test.cpp
-    optimizer/join_ordering/dp_ccp_test.cpp
+#    optimizer/join_ordering/dp_ccp_test.cpp
 #    optimizer/join_ordering/enumerate_ccp_test.cpp
-    optimizer/join_ordering/join_graph_builder_test.cpp
-    optimizer/join_ordering/join_graph_test.cpp
-    optimizer/join_ordering/join_plan_predicate_test.cpp
-    optimizer/join_ordering/join_plan_test.cpp
+#    optimizer/join_ordering/join_graph_builder_test.cpp
+#    optimizer/join_ordering/join_graph_test.cpp
+#    optimizer/join_ordering/join_plan_predicate_test.cpp
+#    optimizer/join_ordering/join_plan_test.cpp
 #    optimizer/lqp_translator_test.cpp
 #    optimizer/optimizer_test.cpp
 #    optimizer/strategy/chunk_pruning_test.cpp
@@ -135,9 +135,9 @@ set(
 #    utils/cuckoo_hashtable_test.cpp
 #    utils/numa_memory_resource_test.cpp
 #    utils/format_bytes_test.cpp
-    statistics/cardinality_estimator_column_statistics_test.cpp
-    statistics/cardinality_estimator_cached_test.cpp
-    statistics/cardinality_estimator_execution_test.cpp
+#    statistics/cardinality_estimator_column_statistics_test.cpp
+#    statistics/cardinality_estimator_cached_test.cpp
+#    statistics/cardinality_estimator_execution_test.cpp
 )
 
 set (
