--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -277,6 +277,8 @@ set(
     planviz/lqp_visualizer.hpp
     planviz/sql_query_plan_visualizer.cpp
     planviz/sql_query_plan_visualizer.hpp
+    planviz/viz_record_layout.cpp
+    planviz/viz_record_layout.hpp
     resolve_type.hpp
     scheduler/abstract_scheduler.cpp
     scheduler/abstract_scheduler.hpp
