Make loads lazy in jit

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -473,6 +473,8 @@ if (${ENABLE_JIT_SUPPORT})
         operators/jit_operator/operators/jit_filter.hpp
         operators/jit_operator/operators/jit_read_tuples.cpp
         operators/jit_operator/operators/jit_read_tuples.hpp
+        operators/jit_operator/operators/jit_read_value.cpp
+        operators/jit_operator/operators/jit_read_value.hpp
         operators/jit_operator/operators/jit_validate.cpp
         operators/jit_operator/operators/jit_validate.hpp
         operators/jit_operator/operators/jit_write_tuples.cpp
